        function could crash (fixed).
        \item Fixed a bug in the evaluation of the rejection criteria where the status of the palaedose
        error criterion was returned as 'OK' even though it was not (Thanks to Annette Kadereit)
        function could crash (fixed),
        \item add support for testdose error as rejection criteria,
        \item recuperation rate was not show properely in the Rejection criteria plot,
        \item instead of showing failed, the polygons are now plotted red in the rejection criteria plot,
        \item minor graphical adjustments.


      }

      \item \code{apply_CosmicRayRemoval()}
      \itemize{

          \item Argument \code{silent} renamed to \code{verbose},
          \item new argument \code{method.Pych.threshold_factor} added to have a better control
          for the threshold value used for the removal,
          \item new argument \code{MARGIN} added to allow the application of the methods along
          the wavelength or the time.


      }


      \item \code{calc_FadingCorr()}
      \itemize{

        \item Table column headers now have all capital letters,
        \item minor performance improvements.

      }

     \item \code{calc_OSLLxTxRatio()}
      \itemize{

        \item New argument \code{digits} introduced to allow direct rounding of the numbers,
        \item add argument \code{sig0} to allow for an extra component of error.
      }


      \item \code{plot_AbanicoPlot()}
      \itemize{

        \item New argument \code{interactive} to produce an interactive plot
        using the JavaScript graphing library 'plotly.js' (requires the
        'plotly' package).

      }

    \item \code{merge_RLum.Data.Curve()}
      \itemize{

        \item Support further merge operations: \code{median}, \code{var}, \code{sd}, \code{min}, \code{max}.
      }

    \item \code{plot_GrowthCurve()}
      \itemize{

        \item If the input data contain a least one infinite value the function will not crash