@@ -118,11 +118,11 @@
 </td>
 <td class=cellinside><br /> The function performs a SAR CW-OSL analysis on an<br /> RLum.Analysis  object including growth curve fitting.<br />
 </td>
-<td class=cellinside>0.7.3
+<td class=cellinside>0.7.4
 </td>
 <td class=cellinside>2016-02-24
 </td>
-<td class=cellinside>18:28:47
+<td class=cellinside>19:11:11
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1172,9 +1172,9 @@
 </td>
 <td class=cellinside>1.8.5
 </td>
-<td class=cellinside>2016-02-23
+<td class=cellinside>2016-02-24
 </td>
-<td class=cellinside>19:40:13
+<td class=cellinside>18:33:54
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
@@ -1342,9 +1342,9 @@
 </td>
 <td class=cellinside>0.4.3
 </td>
-<td class=cellinside>2016-02-23
+<td class=cellinside>2016-02-24
 </td>
-<td class=cellinside>10:09:15
+<td class=cellinside>18:33:54
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
