@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.8-2 package
-% Wed Feb 24 18:32:21 2016
+% Wed Feb 24 19:15:32 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -12,7 +12,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   3 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.2.0 & 2016-01-18 & 15:07:46
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  4 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.7.3 & 2016-02-24 & 18:28:47
+  4 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.7.4 & 2016-02-24 & 19:11:11
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   5 & Analyse\_SAR.OSLdata & Analyse SAR CW-OSL measurements. & $<$br /$>$ The function analyses SAR CW-OSL curve data and provides a summary of the$<$br /$>$ measured data for every position. The output of the function is optimised$<$br /$>$ for SAR OSL measurements on quartz.$<$br /$>$ & 0.2.17 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, HZDR, Freiberg (Germany)$<$br /$>$  R Luminescence Package Team \\ 
@@ -112,7 +112,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   59 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2016-02-19 & 16:35:35
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  60 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.5 & 2016-02-23 & 19:40:13
+  60 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.5 & 2016-02-24 & 18:33:54
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   61 & plot\_Histogram & Plot a histogram with separate error plot & $<$br /$>$ Function plots a predefined histogram with an accompanying error plot as$<$br /$>$ suggested by Rex Galbraith at the UK LED in Oxford 2010.$<$br /$>$ & 0.4.4 & 2016-02-05 & 05:21:29
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),   Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -129,7 +129,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   68 & plot\_RLum.Data.Image & Plot function for an  RLum.Data.Image  S4 class object & $<$br /$>$ The function provides a standardised plot output for image data of an$<$br /$>$ RLum.Data.Image S4 class object, mainly using the plot functions$<$br /$>$ provided by the  raster  package.$<$br /$>$ & 0.1 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  69 & plot\_RLum.Data.Spectrum & Plot function for an RLum.Data.Spectrum S4 class object & $<$br /$>$ The function provides a standardised plot output for spectrum data of an$<$br /$>$ RLum.Data.Spectrum S4 class object$<$br /$>$ & 0.4.3 & 2016-02-23 & 10:09:15
+  69 & plot\_RLum.Data.Spectrum & Plot function for an RLum.Data.Spectrum S4 class object & $<$br /$>$ The function provides a standardised plot output for spectrum data of an$<$br /$>$ RLum.Data.Spectrum S4 class object$<$br /$>$ & 0.4.3 & 2016-02-24 & 18:33:54
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   70 & plot\_RLum & General plot function for RLum S4 class objects & $<$br /$>$ Function calls object specific plot functions for RLum S4 class objects.$<$br /$>$ & 0.4.2 & 2016-02-05 & 05:21:29
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
