@@ -140,11 +140,15 @@ Changes in version 0.6.0 (,2016):
 
              • add support for testdose error as rejection criteria,
 
-             • recuperation rate was not show properely in the
-               Rejection criteria plot,
+             • recuperation rate was not shown properely in the
+               rejection criteria plot,
 
-             • instead of showing failed, the polygons are now plotted
-               red in the rejection criteria plot,
+             • instead of showing failed, the polygon borders are now
+               plotted in red in the rejection criteria plot,
+
+             • if a list of RLum-objects was provided the rejection
+               criteria could not be change any more fixed (thanks to
+               Andrea Junge),
 
              • minor graphical adjustments.
 
